# devops-mcp-bundle

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: skill-conventions.md
docs/adr/: 0001-sqlparse-vs-regex-for-sql-safety.md  0002-set-local-vs-set-session-statement-timeout.md  0003-mocked-k8s-vs-fake-cluster.md  0004-loki-vs-cloudwatch-logs.md
skills/deploy-postmortem/: EVAL.md  SKILL.md
skills/deploy-postmortem/templates/: postmortem.md
skills/k8s-pod-incident-playbook/: EVAL.md  SKILL.md
skills/k8s-pod-incident-playbook/templates/: incident_report.md
skills/postgres-slow-query-triage/: EVAL.md  SKILL.md
skills/postgres-slow-query-triage/templates/: report.md
skills/redis-memory-pressure-triage/: EVAL.md  SKILL.md
skills/redis-memory-pressure-triage/templates/: report.md
src/devops_mcp_bundle/: __init__.py  cli.py
src/devops_mcp_bundle/k8s/: __init__.py  models.py  queries.py  server.py
src/devops_mcp_bundle/observability/: __init__.py  models.py  queries.py  server.py
src/devops_mcp_bundle/postgres/: __init__.py  models.py  queries.py  safety.py  server.py
tests/: test_cli.py
tests/test_k8s/: test_helpers.py  test_parsers.py  test_queries.py
tests/test_observability/: test_queries.py  test_server.py
tests/test_postgres/: test_classifier.py  test_helpers.py  test_queries_integration.py  test_run_safe_query.py  test_safety.py
