[project]
name = "devops-mcp-bundle"
version = "0.1.0"
description = "Three Model Context Protocol servers for DevOps/SRE: Postgres DBA, Kubernetes Inspector, Observability Query — plus a Claude Code Skills pack."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bishara Mekhaeil" }]
keywords = ["mcp", "model-context-protocol", "claude", "postgres", "kubernetes", "prometheus", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # MCP SDK
    "fastmcp>=2.0",
    # Type contracts
    "pydantic>=2.7",
    # Postgres
    "asyncpg>=0.29",
    "sqlparse>=0.5",
    # Kubernetes
    "kubernetes-asyncio>=32.0",
    # Observability
    "httpx>=0.27",
    # CLI / UX
    "typer>=0.12",
    "rich>=13.7",
    # Misc
    "pyyaml>=6.0",
    "anyio>=4.4",
]

[project.urls]
Homepage = "https://github.com/BishBish123/devops-mcp-bundle"
Repository = "https://github.com/BishBish123/devops-mcp-bundle"
Issues = "https://github.com/BishBish123/devops-mcp-bundle/issues"

[project.scripts]
mcp-postgres-dba = "devops_mcp_bundle.postgres.server:main"
mcp-k8s-inspector = "devops_mcp_bundle.k8s.server:main"
mcp-observability = "devops_mcp_bundle.observability.server:main"
devops-mcp = "devops_mcp_bundle.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devops_mcp_bundle"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "SIM", "PL", "RUF", "ASYNC", "S",
]
ignore = [
    "PLR0913",  # too many args — MCP tool funcs legitimately have many
    "PLR2004",
    "E501",
    "S101",
    "S603", "S607",  # subprocess; we control the call sites
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "S608", "ASYNC"]  # tests build SQL with controlled fixtures
"src/devops_mcp_bundle/cli.py" = ["B008"]  # typer pattern
# safety.py is exactly the kind of place where defensive control flow is valued
# more than terse branch counts.
"src/devops_mcp_bundle/postgres/safety.py" = ["PLR0911", "PLR0912"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true
disallow_untyped_decorators = false  # fastmcp + typer

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that touch a real Postgres / k8s / Prometheus",
    "slow: tests that take more than ~1s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["devops_mcp_bundle"]
omit = ["*/cli.py", "*/server.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
